--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <body>
         <h1>Interacting with Data: Examining Canadian Indigenous Populations</h1>
         <h2>Donut Plot: Total Canadian Population Composition</h2>
-        <iframe src="images/donut.html" title = "Donut Chart"></iframe>
+        <iframe src="donut.html" title = "Donut Chart"></iframe>
 
         <h2>Map: Concentrations of Indigenous Populations in Canada</h2>
-        <iframe src="images/map.html" title = "Canadian Map"></iframe>
+        <iframe src="map.html" title = "Canadian Map"></iframe>
 
         <h2>Scatter Plot: Mental Health and Food Insecurity of Indigenous Populations</h2>
-        <iframe src="images/scatter.html" title = "Scatter Plot"></iframe>
+        <iframe src="scatter.html" title = "Scatter Plot"></iframe>
 
         <h2>Donut Subplots: Composition of Canadian Territories with the Highest Concentration of Indigenous Populations</h2>
-        <iframe src="images/subplots.html" title = "Subplots"></iframe>
+        <iframe src="subplots.html" title = "Subplots"></iframe>
     </body>
 </html>
